--- a/aula2/q3/index.html
+++ b/aula2/q3/index.html
@@ -9,3 +9,111 @@
     
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Simulação Versus</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+
+        h1 {
+            margin: 20px;
+        }
+
+        #game-container {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            margin: 20px auto;
+            max-width: 1200px;
+        }
+
+        .team {
+            width: 30%;
+            background-color: #fff;
+            padding: 20px;
+            border: 2px solid #ccc;
+            border-radius: 10px;
+        }
+
+        #field {
+            width: 30%;
+            height: 300px;
+            background-color: lightgreen;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 2px solid #ccc;
+            border-radius: 10px;
+        }
+
+        button {
+            padding: 10px 20px;
+            margin: 10px 0;
+            cursor: pointer;
+        }
+    </style>
+</head>
+<body>
+    <h1>Versus</h1>
+    <div id="game-container">
+        <div class="team" id="team1">
+            <h2>Time 1</h2>
+            <label for="team1-param1">Tamanho da bola:</label>
+            <input type="range" id="team1-param1" min="1" max="10">
+
+            <label for="team1-param2">Quantidade de gols:</label>
+            <input type="number" id="team1-param2" value="0">
+
+            <label for="team1-param3">Velocidade:</label>
+            <input type="range" id="team1-param3" min="1" max="100">
+
+            <button onclick="defineTeam('team1')">Definir</button>
+            <p>Pontuação: <span id="score-red">0</span></p>
+        </div>
+
+        <div id="field">
+            <button id="start">Start</button>
+        </div>
+
+        <div class="team" id="team2">
+            <h2>Time 2</h2>
+            <label for="team2-param1">Tamanho da bola:</label>
+            <input type="range" id="team2-param1" min="1" max="10">
+
+            <label for="team2-param2">Quantidade de gols:</label>
+            <input type="number" id="team2-param2" value="0">
+
+            <label for="team2-param3">Velocidade:</label>
+            <input type="range" id="team2-param3" min="1" max="100">
+
+            <button onclick="defineTeam('team2')">Definir</button>
+            <p>Pontuação: <span id="score-blue">0</span></p>
+        </div>
+    </div>
+
+    <script>
+        function defineTeam(team) {
+            const size = document.getElementById(`${team}-param1`).value;
+            const goals = document.getElementById(`${team}-param2`).value;
+            const speed = document.getElementById(`${team}-param3`).value;
+
+            alert(`Configurações do ${team} definidas: Tamanho: ${size}, Gols: ${goals}, Velocidade: ${speed}`);
+        }
+
+        document.getElementById("start").addEventListener("click", () => {
+            alert("Jogo iniciado!");
+            // Adicione lógica para iniciar a simulação aqui
+        });
+    </script>
+</body>
+</html>
